--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,6 +20,7 @@ jobs:
           - windows-latest
           - macos-latest
     runs-on: ${{ matrix.os }}
+    timeout-minutes: 20
     steps:
       - name: Install Go
         uses: actions/setup-go@v2
